
MONTE CARLO

- Use different random-number generators for calibration and pricing
  in Longstaff-Schwartz engine (thanks to Peter Caspers).

DATE/TIME

- Added forecast dates for moving holidays to Saudi Arabia calendar up
  to 2022 (thanks to Jayanth R. Varma).

- Added new Ukrainian holiday, Defender's Day (thanks to GitHub user
  maksym-studenets).

MATH

- Added mixed log interpolation (thanks to GitHub user sfondi).

- Avoid mixing different types while bit-shifting in fast Fourier
  transform on 64-bit systems (thanks to Nikolai Nowaczyk).

DEPRECATED FEATURES

- Removed DateParser::split method (deprecated in version 1.6).

TEST SUITE

- The test suite is now run with a fixed evaluation date instead of
  using today's date. This helps avoid transient errors due to
  holidays. It is still possible to use today's date (or any other
  date) by running it as:

    $ quantlib-test-suite -- --date=today

  or

    $ quantlib-test-suite -- --date=2016-02-08

  (Thanks to Peter Caspers.)

NEW OPT-IN FEATURES

These features are disabled by default and can be enabled by defining
a macro or passing a flag to `./configure`.  Feedback is appreciated.

- Added a parallel unit-test runner (thanks to Klaus Spanderen). This
  was successfully used under Linux, but problems were reported on Mac
  OS X and occasionally on Visual C++ 2010.  The feature requires
  Boost 1.59 or later and can be enabled by uncommenting the
  `QL_ENABLE_PARALLEL_UNIT_TEST_RUNNER` macro in `ql/userconfig.hpp`
  on Visual C++ or by passing the `--enable-parallel-unit-test-runner`
  to `./configure` on other systems.

EXPERIMENTAL FOLDER

The ql/experimental folder contains code which is still not fully
integrated with the library or even fully tested, but is released in
order to get user feedback. Experimental classes are considered
unstable; their interfaces might change in future releases.

Changes and new contributions for this release were:
