@@ -66,6 +66,8 @@ DATE/TIME
 - Added new Ukrainian holiday, Defender's Day (thanks to GitHub user
   maksym-studenets).
 
+- Added a few more holidays for South Korea (thanks to Faycal El Karaa).
+
 MATH
 
 - Added mixed log interpolation (thanks to GitHub user sfondi).
